Selector multiple del TypeAheadActores

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+body{
+    margin: 0;
+    --webkit-font-smoothing: antialiased;
+    --moz-osx-font-smoothing:grayscale;
+}
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
 form > a {
     margin-left: 1rem;
+}
+
+.pointer{
+    cursor:pointer;
 }
